# demo3d

./: .gitignore  CMakeLists.txt  README.md
include/: context.hpp  gfx.hpp  obj.hpp  pipeline.hpp  scene.hpp  texture.hpp  util.hpp  window.hpp
src/: main.cpp
